# game_physics_2

./: .gitignore  README.md  hugo.yaml
assets/images/: lib.excalidraw
assets/images/unused/: stable_zone_forward.excalidraw
assets/js/: test.js
assets/js/calc_mesh_params/: shoelace.js
assets/js/common/: base_vis.js  color_scheme.js  ui.js  (+6 more)
assets/pictures/: lib.excalidraw
assets/rust/: Cargo.toml  index.html
assets/rust/pkg/: .gitignore  game_physics_simulation.js  game_physics_simulation_bg.wasm
assets/rust/src/: lib.rs  main.rs
assets/rust/src/systems/: mod.rs
assets/rust/src/systems/collisions/: mod.rs
assets/rust/src/systems/collisions/circles_collisions/: interface.rs  mod.rs  system.rs  system_parameters.rs  visualizer.rs
assets/rust/src/systems/constraints/: mod.rs
assets/rust/src/systems/constraints/pbd/: system.rs
assets/rust/src/systems/constraints/xpbd/: mod.rs
assets/rust/src/systems/constraints/xpbd/neohookean/: interface.rs  system.rs  system_parameters.rs  visualizer.rs
assets/rust/src/utils/: ball.rs  base_url.rs  colors.rs  create_window.rs  mod.rs  parameters.rs  tetra_mesh.rs  ui.rs
content/: _index.md  about.md
content/about/: _index.md
content/lectures/: _index.md
content/playground/: 3_body.md  _index.md
i18n/: en.yaml
layouts/partials/: add_scripts.html
layouts/shortcodes/: add_script.html  collapse.html  details.html  home_ref.html  image.html  include_base_sketch.html  include_md.html  include_sketch.html  include_test_sketch.html  include_wasm.html  publish_obj.html
tests/water/: index.html  water.js
(+204 files in other folders)
