[package]
name = "game_physics_simulation"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game_physics_simulation"
path = "src/main.rs"

[lib]
name = "game_physics_simulation"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
three-d = { version = "0.18.1", features = ["egui-gui"] }
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlCanvasElement"] }
nalgebra = "0.33.2"
three-d-asset = { version = "0.9.2", features = ["http"]}
once_cell = "1.20.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.43.0", features = ["full"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"

# full optimization
[profile.release]
opt-level = 's'
lto = true
panic = "abort"              # Disables unwind information to reduce binary size
strip = true                 # Strips debug symbols from the final binary
debug = false                # Do not include debug information in the release build
overflow-checks = false      # Disable integer overflow checks in release builds
incremental = false          # Disable incremental compilation for release builds

